tests/baselines/reference/taggedTemplateWithConstructableTag02(strict=true).errors.txt
taggedTemplateWithConstructableTag02.ts(6,1): error TS2349: This expression is not callable.
  Type 'I' has no call signatures.
taggedTemplateWithConstructableTag02.ts(6,1): error TS2454: Variable 'tag' is used before being assigned.


==== taggedTemplateWithConstructableTag02.ts (2 errors) ====
    interface I {
        new (...args: any[]): string;
        new (): number;
    }
    var tag: I;
    tag `Hello world!`;
    ~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'I' has no call signatures.
    ~~~
!!! error TS2454: Variable 'tag' is used before being assigned.